Revert "Cambio de Nombres a entidades, propiedades y Swagger"
This reverts commit b8c4f8afd72a35afe38c31f49792061423f74486.
